[package]
name = "gpui-list"
version = "0.1.0"
edition = "2021"


[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
anyhow = "1.0.80"
rust-embed = "8.2.0"
schemars = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_derive = { version = "1.0", features = ["deserialize_in_place"] }
serde_json = { version = "1.0", features = ["preserve_order", "raw_value"] }
serde_json_lenient = { version = "0.1", features = [
    "preserve_order",
    "raw_value",
] }
serde_repr = "0.1"
